Margins, Summary, and Education
+ Made margins 0.5 inches
+ Removed summary
+ Re-spaced address area
+ Condensed education

--- a/index.html
+++ b/index.html
@@ -23,16 +23,11 @@
           <h4 class="heading-position">Software Engineer & Product Manager</h4>
           <h6 class="heading-location">Great Boston Area</h6>
         </div>
-        <address class="d-flex justify-content-between border-top border-bottom my-0">
+        <address class="">
           <a href="tel:+1-518-334-2014">518-334-2014</a>
           <a href="mailto:jonathan.marcus@gmail.com">jonathan.marcus@gmail.com</a>
           <a href="https://github.com/zzyyfff" target="_blank">Github: zzyyfff</a>
         </address>
-        <div class="personal-summary border-bottom my-2">A lifelong learner with a diverse background in medicine, multimedia art, interaction design, and teaching. Loves big systems thinking, empathy, logic, and compassion for solving problems of
-          all kinds.
-          Deep diving into a problem makes my heart sing: leveraging cutting edge technology to develop innovative solutions while supporting a diverse team, building the right things, finding the metaphors that help everyone understand and
-          cooperate, and nurturing a positive environment. <div class="bottom-summary-spacer">&nbsp;</div>
-        </div>
       </header>
     </div>
     <div class="row d-flex" id="main-site-row">
@@ -129,15 +124,15 @@
         </section>
         <section class="row" id="education">
           <h3 class="">Education</h3>
-          <div class="col-12">Harvard School of Dental Medicine and Harvard Medical School</div>
-          <div class="col-12 pl-4 ml-2">Doctor of Medicine in Dentistry (DMD) Student (2011 to 2014)</div>
-          <div class="col-12">Tufts University</div>
-          <div class="col-12 pl-4 ml-2">Post Baccalaureate Pre-Health Program (2008 to 2010)</div>
-          <div class="col-12">Rensselaer Polytechnic Institute</div>
-          <div class="col-12 pl-4 ml-2">Bachelor of Science in Information Technology; concentration in Electronic Art (1999-2003)</div>
-          <div class="col-12 pl-4 ml-2"><em>magna cum laude</em></div>
-          <div class="col-12 pl-4 ml-2"><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize</em></div>
-          <div class="col-12 pl-4 ml-2"><em>for the thesis project “Window, Tangent to Time.”</em></div>
+          <ul>
+            <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student (2011-2014)</li>
+            <li>Tufts University; Post Baccalaureate Pre-Health Program (2008 to 2010)</li>
+            <li>Rensselaer Polytechnic Institute; BS in Information Technology and Electronic Art (1999-2003)</li>
+            <ul>
+              <li><em>magna cum laude</em></li>
+              <li><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize for the thesis project “Window, Tangent to Time.”</em></li>
+            </ul>
+          </ul>
         </section>
         <section class="row" id="honors">
           <h3 class="d-none">Honors</h3>
