Completed 2nd Draft revisions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
             <li>Max/MSP/Jitter</li>
             <li>OpenGL + GLSL Shaders</li>
             <li>Lean Methodology</li>
-            <li>Strategic Thinking</li>
             <li>UX/UI</li>
           </ul>
         </section>
@@ -59,7 +58,7 @@
           <h4>Additional Skills</h4>
           <ul>
             <li>Teaching</li>
-            <li>Mediation</li>
+            <li>Mediation (trained)</li>
             <li>Photoshop</li>
             <li>Video Production</li>
             <li>Audio Production</li>
@@ -71,20 +70,30 @@
         <section id="interests" class="left-sidebar-element skills-interests">
           <h4>Interests</h4>
           <ul>
-            <li>Outdoor Rock Climbing</li>
+            <li>Rock Climbing</li>
             <li>Yoga</li>
             <li>Interactive Art</li>
             <li>Camping</li>
-            <li>Hosting Cooking Parties</li>
+            <li>Cooking Parties</li>
             <li>Meditation</li>
             <li>Science Fiction</li>
             <li>Emotional Literacy and Development</li>
           </ul>
         </section>
+        <section id="fun-fact" class="left-sidebar-element fun-fact">
+          <h4>Fun Fact</h4>
+            Viral internet stardom for <a href="https://www.google.com/search?q=deep+fried+water">"deep fried water"</a>
+        </section>
       </div>
       <main class="col-9">
-        <section class="row" id="GA-experience">
-          <h3 class="">Web Development Immersive — General Assembly</h3>
+        <section class="row" id="experience">
+          <h3 class="">Selected Experince</h3>
+          <div class="col-12">
+            <h4 class="">Web Development Immersive — General Assembly</h4>
+          </div>
+          <div class="col-12">
+            <h6>Jan 2019 to May 2019</h6>
+          </div>
 
           <div class="ga-summary col-12">A rigorous 12-week, 500+ hour, intensive professional training program, building fullstack web applications with an array of modern programming languages, frameworks, and tools.</div>
           <div class="row mb-4">
@@ -92,10 +101,10 @@
               <h4>Projects:</h4>
             </div>
             <article class="col-4" id="project1">
-              <h5 class="project-title">Map-tales</h5>
-              Narratives spread across a map of where you've been. This geolocated writing system has a RESTful backend written with Ruby, Rails, & PostgreSQL; frontend includes JavaScript, jQuery, and SASS.
+              <h5 class="project-title"><a href="https://zzyyfff.github.io/scouting-advancement-tracker-client/">Scout-Tracker</a></h5>
+              A scouting achievement and merit badge tracker, with a RESTful backend written with Ruby, Rails, & PostgreSQL and a frontend includes JavaScript, jQuery, and SASS.
             </article>
-            <article class="col-4 border-left border-right" id="project2">
+            <article class="col-4 project-middle" id="project2">
               <h5 class="project-title"><a href="https://github.com/zzyyfff/tic-tac-toe-client">Tic-Tac-Toe</a></h5>
               A full-featured tic-tac-toe game with easter eggs to explore. Written with JavaScript, jQuery, HTML, CSS, SASS, and Bootstrap.
             </article>
@@ -104,38 +113,39 @@
               A bullet-proof web application the solves all user needs with cutting-edge technology. Extensible, fluid, clever, and well documented.
             </article>
           </div>
-        </section>
-        <section class="row" id="relevant-experience">
-          <h3 class="">Relevant Experience</h3>
           <div class="col-12">
-            <h4>Leadership Team & Product Management — Code for Boston</h4>
+            <h4 class="cfb-and-interim">Leadership Team & Product Management — Code for Boston</h4>
           </div>
           <div class="col-12">
-            <h5>Jan 2017 to Present</h5>
+            <h6>Jan 2017 to Present</h6>
           </div>
-          <ul class="pr-4">
+          <ul class="pr-3">
             <li>Organize and run over 100 hack nights (and counting!), 70+ participants each, to build civic technology projects.</li>
-            <li>Collaborating with goverment and community partners to address social and civic challenges through creative uses of technology.</li>
-            <li>Work cross-functionally across the group to define and develop proofs of concept, use cases, product designs, and strategy.</li>
+            <li>Collaborating with government and community partners to address social and civic challenges through creative uses of technology.</li>
             <li>Ran 2 major weekend hackathons with over 100 participants each.</li>
-            <li>Organized a project demo event.</li>
-            <li>Organized a lightning talks event for National Day of Civic Hacking</li>
+            <li>Organized a project demo event and lightning talks, bringing in more than a year of funding.</li>
           </ul>
+          <div class="col-12">
+            <h4 class="cfb-and-interim">Interim Projects</h4>
+          </div>
+          <div class="col-12">
+            <h6>May 2014 to Dec 2018</h6>
+          </div>
+          <div class="col-12">Worked on myriad projects, including co-founder and CEO of Cabin Systems, Inc., a privacy respecting cellular carrier (MVNO) startup; project management, product research, and fabirication for Pupa Dupa, LLC., an insect farming automation startup; design, prototyping, and market research for Ballsy, a magnetic physical manipulation board game; and co-founder of Breadward, a social meal-sharing app.</div>
         </section>
         <section class="row" id="education">
-          <h3 class="">Education</h3>
+          <h3 class="edu-awards">Education and Awards</h3>
           <ul>
             <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student (2011-2014)</li>
             <li>Tufts University; Post Baccalaureate Pre-Health Program (2008 to 2010)</li>
-            <li>Rensselaer Polytechnic Institute; BS in Information Technology and Electronic Art (1999-2003)</li>
+            <li>Rensselaer Polytechnic Institute; BS in Information Technology and Art (1999-2003)</li>
             <ul>
               <li><em>magna cum laude</em></li>
-              <li><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize for the thesis project “Window, Tangent to Time.”</em></li>
+              <li><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize for interactive multi-media thesis project “Window, Tangent to Time.”</em></li>
             </ul>
+            <li>Good Citizenship Award - The Union League of Philadelphia (1999)                   </li>
+            <li>Eagle Scout - Scouts BSA (1998)</li>
           </ul>
-        </section>
-        <section class="row" id="honors">
-          <h3 class="d-none">Honors</h3>
         </section>
       </main>
     </div>
