--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
           <h6 class="heading-location">Great Boston Area</h6>
         </div>
         <address class="">
-          <a href="tel:+1-518-334-2014">518-334-2014</a>
           <a href="mailto:jonathan.marcus@gmail.com">jonathan.marcus@gmail.com</a>
-          <a href="https://github.com/zzyyfff" target="_blank">Github: zzyyfff</a>
+          <a href="tel:+1-518-334-2014">518-334-2014</a>
+          <div>Github: <a href="https://github.com/zzyyfff" target="_blank">zzyyfff</a></div>
+          <div>Portfolio: <a href="https://zzyyfff.github.io" target="_blank">https://zzyyfff.github.io/</a></div>
         </address>
       </header>
     </div>
@@ -36,20 +37,19 @@
           <h4>Skills</h4>
           <ul>
             <li>React</li>
-            <li>Ruby</li>
-            <li>Rails</li>
-            <li>JavaScript</li>
+            <li>JS + Express + Mongo</li>
+            <li>Ruby + Rails</li>
+            <li>PostgreSQL</li>
             <li>jQuery + AJAX</li>
             <li>HTML + CSS + SASS</li>
             <li>Bootstrap</li>
-            <li>PostgreSQL</li>
             <li>Git + GitHub</li>
             <li>C++</li>
             <li>Objective-C</li>
             <li>Python</li>
             <li>Machine Learning</li>
             <li>Max/MSP/Jitter</li>
-            <li>OpenGL + GLSL Shaders</li>
+            <li>OpenGL + GLSL</li>
             <li>Lean Methodology</li>
             <li>UX/UI</li>
           </ul>
@@ -82,60 +82,59 @@
         </section>
         <section id="fun-fact" class="left-sidebar-element fun-fact">
           <h4>Fun Fact</h4>
-            Viral internet stardom for <a href="https://www.google.com/search?q=deep+fried+water">"deep fried water"</a>
+          <div class="fun-fact-body">Viral internet stardom for <a href="https://www.google.com/search?q=deep+fried+water">"deep fried water"</a></div>
         </section>
       </div>
       <main class="col-9">
-        <section class="row" id="experience">
-          <h3 class="">Selected Experince</h3>
-          <div class="col-12">
-            <h4 class="">Web Development Immersive — General Assembly</h4>
+        <section class="row" id="web-experience">
+          <h3 class="">Web Development</h3>
+          <div class="col-12 general-assembly org-title">
+            <span class="h4-span">General Assembly —&nbsp;</span><span class="h6-span">Jan 2019 to May 2019</span>
           </div>
-          <div class="col-12">
-            <h6>Jan 2019 to May 2019</h6>
-          </div>
-
           <div class="ga-summary col-12">A rigorous 12-week, 500+ hour, intensive professional training program, building fullstack web applications with an array of modern programming languages, frameworks, and tools.</div>
-          <div class="row mb-4">
-            <div class="col-12 mt-3 mb-2">
-              <h4>Projects:</h4>
-            </div>
-            <article class="col-4" id="project1">
-              <h5 class="project-title"><a href="https://zzyyfff.github.io/scouting-advancement-tracker-client/">Scout-Tracker</a></h5>
-              A scouting achievement and merit badge tracker, with a RESTful backend written with Ruby, Rails, & PostgreSQL and a frontend includes JavaScript, jQuery, and SASS.
-            </article>
-            <article class="col-4 project-middle" id="project2">
-              <h5 class="project-title"><a href="https://github.com/zzyyfff/tic-tac-toe-client">Tic-Tac-Toe</a></h5>
-              A full-featured tic-tac-toe game with easter eggs to explore. Written with JavaScript, jQuery, HTML, CSS, SASS, and Bootstrap.
-            </article>
-            <article class="col-4 pr-4" id="project3">
-              <h5 class="project-title">Project #3 Placeholder</h5>
-              A bullet-proof web application the solves all user needs with cutting-edge technology. Extensible, fluid, clever, and well documented.
-            </article>
+          <div class="col-12 projects">
+            <h4>Projects:</h4>
           </div>
-          <div class="col-12">
-            <h4 class="cfb-and-interim">Leadership Team & Product Management — Code for Boston</h4>
-          </div>
-          <div class="col-12">
-            <h6>Jan 2017 to Present</h6>
+          <article class="col-4 pr-4" id="project3">
+            <h5 class="project-title"><a href="https://zzyyfff.github.io/chat-client">∿Chat</a></h5>
+            A featureful realtime chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB
+          </article>
+          <article class="col-4 project-middle" id="project2">
+            <h5 class="project-title"><a href="https://2jar.github.io/photo-jar-client/">Photo Jar</a></h5>
+            A photo storing and sharing app with geolocation intergration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.
+          </article>
+          <article class="col-4" id="project1">
+            <h5 class="project-title"><a href="https://zzyyfff.github.io/scouting-advancement-tracker-client/">Scout-Tracker</a></h5>
+            A scouting achievement and merit badge tracker, with a RESTful backend. Built with Ruby, Rails, & PostgreSQL and a frontend includes JavaScript, jQuery, and SASS.
+          </article>
+        </section>
+        <section class="row leadership-pm" id="leadership-pm">
+          <h3 class="cfb-and-interim">Leadership & Product Management</h3>
+          <div class="col-12 org-title">
+            <span class="h4-span">Code for Boston —&nbsp;</span><span class="h6-span">Jan 2017 to present</span>
           </div>
           <ul class="pr-3">
-            <li>Organize and run over 100 hack nights (and counting!), 70+ participants each, to build civic technology projects.</li>
+            <li>Organize and run over 100 hack nights (and counting), 70+ participants each, to build civic technology projects.</li>
             <li>Collaborating with government and community partners to address social and civic challenges through creative uses of technology.</li>
             <li>Ran 2 major weekend hackathons with over 100 participants each.</li>
             <li>Organized a project demo event and lightning talks, bringing in more than a year of funding.</li>
           </ul>
-          <div class="col-12">
-            <h4 class="cfb-and-interim">Interim Projects</h4>
+        </section>
+        <section class="row" id="innovation-making">
+          <h3>Innovation & Making</h3>
+          <div class="col-12 org-title">
+            <span class="h4-span">Selected Projects —&nbsp;</span><span class="h6-span">May 2014 to Dec 2018</span>
           </div>
-          <div class="col-12">
-            <h6>May 2014 to Dec 2018</h6>
-          </div>
-          <div class="col-12">Worked on myriad projects, including co-founder and CEO of Cabin Systems, Inc., a privacy respecting cellular carrier (MVNO) startup; project management, product research, and fabirication for Pupa Dupa, LLC., an insect farming automation startup; design, prototyping, and market research for Ballsy, a magnetic physical manipulation board game; and co-founder of Breadward, a social meal-sharing app.</div>
+          <ul class="pr-3">
+            <li>Co-founder and CEO of Cabin Systems, Inc., a privacy centric MVNO startup.</li>
+            <li>Project management, product research, and fabirication for Pupa Dupa, LLC., an insect farming automation startup.</li>
+            <li>Design, prototyping, and testing for Ballsy, a magnetic physical manipulation board game.</li>
+            <li>co-founder of Breadward, a social meal-sharing app.</li>
+          </ul>
         </section>
         <section class="row" id="education">
-          <h3 class="edu-awards">Education and Awards</h3>
-          <ul>
+          <h3 class="edu-awards">Education</h3>
+          <ul class="pr-3">
             <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student (2011-2014)</li>
             <li>Tufts University; Post Baccalaureate Pre-Health Program (2008 to 2010)</li>
             <li>Rensselaer Polytechnic Institute; BS in Information Technology and Art (1999-2003)</li>
@@ -143,8 +142,6 @@
               <li><em>magna cum laude</em></li>
               <li><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize for interactive multi-media thesis project “Window, Tangent to Time.”</em></li>
             </ul>
-            <li>Good Citizenship Award - The Union League of Philadelphia (1999)                   </li>
-            <li>Eagle Scout - Scouts BSA (1998)</li>
           </ul>
         </section>
       </main>
