add scouting to interests

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
           <h4>Interests</h4>
           <ul>
             <li>Rock Climbing</li>
-            <li>Yoga</li>
+            <li>Meditation + Yoga</li>
             <li>Interactive Art</li>
-            <li>Camping</li>
             <li>Cooking Parties</li>
-            <li>Meditation</li>
             <li>Science Fiction</li>
+            <li>Hiking + Camping</li>
+            <li>Scouting (Eagle Scout)</li>
             <li>Emotional Literacy and Development</li>
           </ul>
         </section>
@@ -97,7 +97,7 @@
           </div>
           <article class="col-4 pr-4" id="project3">
             <h5 class="project-title"><a href="https://zzyyfff.github.io/chat-client">∿Chat</a></h5>
-            A featureful realtime chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB
+            A featureful real-time chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB.
           </article>
           <article class="col-4 project-middle" id="project2">
             <h5 class="project-title"><a href="https://2jar.github.io/photo-jar-client/">Photo Jar</a></h5>
