Typo edits from my dad

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
           </div>
           <article class="col-4 pr-4" id="project3">
             <h5 class="project-title"><a href="https://zzyyfff.github.io/chat-client">∿Chat</a></h5>
-            A featureful real-time chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB.
+            A featureful real-time chat app, providing users the chance to edit their messages on the fly. Built with React, Express, Mongoose, and MongoDB.
           </article>
           <article class="col-4 project-middle" id="project2">
             <h5 class="project-title"><a href="https://2jar.github.io/photo-jar-client/">Photo Jar</a></h5>
-            A photo storing and sharing app with geolocation intergration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.
+            A photo storing and sharing app with geolocation integration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.
           </article>
           <article class="col-4" id="project1">
             <h5 class="project-title"><a href="https://zzyyfff.github.io/scouting-advancement-tracker-client/">Scout-Tracker</a></h5>
@@ -116,8 +116,8 @@
           <ul class="pr-3">
             <li>Organize and run over 100 hack nights (and counting), 70+ participants each, to build civic technology projects.</li>
             <li>Collaborating with government and community partners to address social and civic challenges through creative uses of technology.</li>
-            <li>Ran 2 major weekend hackathons with over 100 participants each.</li>
-            <li>Organized a project demo event and lightning talks, bringing in more than a year of funding.</li>
+            <li>Co-directed 2 major weekend hackathons with over 100 participants each.</li>
+            <li>Organized a project demo event and lightning talks, raising over one year of funding.</li>
           </ul>
         </section>
         <section class="row" id="innovation-making">
@@ -129,7 +129,7 @@
             <li>Co-founder and CEO of Cabin Systems, Inc., a privacy centric MVNO startup.</li>
             <li>Project management, product research, and fabirication for Pupa Dupa, LLC., an insect farming automation startup.</li>
             <li>Design, prototyping, and testing for Ballsy, a magnetic physical manipulation board game.</li>
-            <li>co-founder of Breadward, a social meal-sharing app.</li>
+            <li>Co-founder of Breadward, a social meal-sharing app.</li>
           </ul>
         </section>
         <section class="row" id="education">
@@ -137,6 +137,9 @@
           <ul class="pr-3">
             <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student (2011-2014)</li>
             <li>Tufts University; Post Baccalaureate Pre-Health Program (2008 to 2010)</li>
+            <ul>
+              <li><em>GPA 4.0</em></li>
+            </ul>
             <li>Rensselaer Polytechnic Institute; BS in Information Technology and Art (1999-2003)</li>
             <ul>
               <li><em>magna cum laude</em></li>
