--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-12 general-assembly org-title">
             <span class="h4-span">General Assembly —&nbsp;</span><span class="h6-span">Jan 2019 to May 2019</span>
           </div>
-          <div class="ga-summary col-12">A rigorous 12-week, 500+ hour, intensive professional training program, building fullstack web applications with an array of modern programming languages, frameworks, and tools.</div>
+          <div class="ga-summary col-12">A rigorous 12-week, 500+ hour, intensive professional training program, building full-stack web applications with an array of modern programming languages, frameworks, and tools.</div>
           <div class="col-12 projects">
             <h4>Projects:</h4>
           </div>
