--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <article class="col-4 pr-4" id="project3">
             <h5 class="project-title"><a href="https://zzyyfff.github.io/chat-client">∿Chat</a></h5>
-            A featureful real-time chat app, providing users the chance to edit their messages on the fly. Built with React, Express, Mongoose, and MongoDB.
+            A featureful real-time chat app, providing users the opportunity to edit their messages on the fly. Built with React, Express, Mongoose, and MongoDB.
           </article>
           <article class="col-4 project-middle" id="project2">
             <h5 class="project-title"><a href="https://2jar.github.io/photo-jar-client/">Photo Jar</a></h5>
