--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </article>
           <article class="col-4 project-middle" id="project2">
             <h5 class="project-title"><a href="https://2jar.github.io/photo-jar-client/">Photo Jar</a></h5>
-            A photo storing and sharing app with geolocation integration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.
+            A photo storage and sharing app with geolocation integration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.
           </article>
           <article class="col-4" id="project1">
             <h5 class="project-title"><a href="https://zzyyfff.github.io/scouting-advancement-tracker-client/">Scout-Tracker</a></h5>
