--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li>HTML + CSS + SASS</li>
             <li>Bootstrap</li>
             <li>Git + GitHub</li>
+            <li>AWS</li>
             <li>C++</li>
             <li>Objective-C</li>
             <li>Python</li>
