--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
           <ul class="pr-3">
             <li>Co-founder and CEO of Cabin Systems, Inc., a privacy centric MVNO startup.</li>
-            <li>Project management, product research, and fabirication for Pupa Dupa, LLC., an insect farming automation startup.</li>
+            <li>Project management, product research, and fabrication for Pupa Dupa, LLC., an insect farming automation startup.</li>
             <li>Design, prototyping, and testing for Ballsy, a magnetic physical manipulation board game.</li>
             <li>Co-founder of Breadward, a social meal-sharing app.</li>
           </ul>
