Edits from accountabilibuddies meeting with Julie

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Jonathan Lee Marcus — Résumé</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=1024">
 
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -16,12 +17,12 @@
 
 <body>
   <div class="resume" id="main-container">
-    <div class="row" id="header-row">
+    <div class="row header-row" id="header-row">
       <header class="col-12">
         <div class="d-flex flex-column align-items-center">
           <h1 class="heading-name">Jonathan Lee Marcus</h1>
           <h4 class="heading-position">Software Engineer & Product Manager</h4>
-          <h6 class="heading-location">Great Boston Area</h6>
+          <h6 class="heading-location">Greater Boston Area</h6>
         </div>
         <address class="">
           <a href="mailto:jonathan.marcus@gmail.com">jonathan.marcus@gmail.com</a>
@@ -32,8 +33,8 @@
       </header>
     </div>
     <div class="row d-flex" id="main-site-row">
-      <div class="col-3" id="left-sidebar">
-        <section id="relevant-skills" class="left-sidebar-element skills">
+      <div class="col-3" id="left-sidebar" class="left-sidebar">
+        <section id="relevant-skills" class="left-sidebar-section skills">
           <h4>Skills</h4>
           <ul>
             <li>React</li>
@@ -45,6 +46,11 @@
             <li>Bootstrap</li>
             <li>Git + GitHub</li>
             <li>AWS</li>
+          </ul>
+        </section>
+        <section id="prior-skills" class="left-sidebar-section prior-experience">
+          <h4>Prior Experience</h4>
+          <ul>
             <li>C++</li>
             <li>Objective-C</li>
             <li>Python</li>
@@ -55,20 +61,19 @@
             <li>UX/UI</li>
           </ul>
         </section>
-        <section id="additional-skills" class="left-sidebar-element skills-additional">
+        <section id="additional-skills" class="left-sidebar-section additional-skills">
           <h4>Additional Skills</h4>
           <ul>
             <li>Teaching</li>
             <li>Mediation (trained)</li>
             <li>Photoshop</li>
-            <li>Video Production</li>
-            <li>Audio Production</li>
+            <li>A/V Production</li>
             <li>Electronics Fab</li>
             <li>CAD (Solidworks)</li>
             <li>Woodworking</li>
           </ul>
         </section>
-        <section id="interests" class="left-sidebar-element skills-interests">
+        <section id="interests" class="left-sidebar-section interests">
           <h4>Interests</h4>
           <ul>
             <li>Rock Climbing</li>
@@ -81,7 +86,7 @@
             <li>Emotional Literacy and Development</li>
           </ul>
         </section>
-        <section id="fun-fact" class="left-sidebar-element fun-fact">
+        <section id="fun-fact" class="left-sidebar-section fun-fact">
           <h4>Fun Fact</h4>
           <div class="fun-fact-body">Viral internet stardom for <a href="https://www.google.com/search?q=deep+fried+water">"deep fried water"</a></div>
         </section>
@@ -121,7 +126,7 @@
             <li>Organized a project demo event and lightning talks, raising over one year of funding.</li>
           </ul>
         </section>
-        <section class="row" id="innovation-making">
+        <section class="row innovation-making" id="innovation-making">
           <h3>Innovation & Making</h3>
           <div class="col-12 org-title">
             <span class="h4-span">Selected Projects —&nbsp;</span><span class="h6-span">May 2014 to Dec 2018</span>
@@ -133,15 +138,15 @@
             <li>Co-founder of Breadward, a social meal-sharing app.</li>
           </ul>
         </section>
-        <section class="row" id="education">
-          <h3 class="edu-awards">Education</h3>
+        <section class="row education" id="education">
+          <h3 class="education-title">Education</h3>
           <ul class="pr-3">
-            <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student (2011-2014)</li>
-            <li>Tufts University; Post Baccalaureate Pre-Health Program (2008 to 2010)</li>
+            <li>Harvard School of Dental Medicine and Harvard Medical School; DMD Student</li>
+            <li>Tufts University; Post Baccalaureate Pre-Health Program</li>
             <ul>
               <li><em>GPA 4.0</em></li>
             </ul>
-            <li>Rensselaer Polytechnic Institute; BS in Information Technology and Art (1999-2003)</li>
+            <li>Rensselaer Polytechnic Institute; BS in Information Technology and Art</li>
             <ul>
               <li><em>magna cum laude</em></li>
               <li><em>Awarded the School of Humanities and Social Sciences Distinguished Capstone Prize for interactive multi-media thesis project “Window, Tangent to Time.”</em></li>
