Minor wording change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
     </div>
     <div class="row d-flex" id="main-site-row">
-      <div class="col-3" id="left-sidebar" class="left-sidebar">
+      <div id="left-sidebar" class="col-3 left-sidebar">
         <section id="relevant-skills" class="left-sidebar-section skills">
           <h4>Skills</h4>
           <ul>
@@ -49,7 +49,7 @@
           </ul>
         </section>
         <section id="prior-skills" class="left-sidebar-section prior-experience">
-          <h4>Prior Experience</h4>
+          <h4>Prior Background</h4>
           <ul>
             <li>C++</li>
             <li>Objective-C</li>
