--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <li>Bootstrap</li>
             <li>Git + GitHub</li>
             <li>AWS</li>
+            <li>Max/MSP/Jitter</li>
           </ul>
         </section>
         <section id="prior-skills" class="left-sidebar-section prior-experience">
-          <h4>Prior Background</h4>
+          <h4>Exposure to</h4>
           <ul>
             <li>C++</li>
             <li>Objective-C</li>
             <li>Python</li>
             <li>Machine Learning</li>
-            <li>Max/MSP/Jitter</li>
             <li>OpenGL + GLSL</li>
             <li>Lean Methodology</li>
             <li>UX/UI</li>
